fix code inspection findings